--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
     </div>
     <!-- preloader area end -->
     <!-- off canvas menu start -->
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasmanu">
+    <!-- <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasmanu">
       <div class="offcanvas-header">
         <div class="khalif-canvas-logo">
           <a href="index-2.html"
-            ><img src="assets/img/logo2.png" alt="logo"
+            ><img src="assets/img/autopartsLogo.png" alt="logo"
           /></a>
         </div>
         <button
@@ -243,10 +243,10 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- off canvas menu end -->
     <!-- header area start -->
-    <header>
+    <header id="topPage">
       <div class="khalif-header-wrape">
         <div class="container-fluid">
           <div class="row">
@@ -254,7 +254,7 @@
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
               <div class="khalif-main-manu-content">
                 <div class="header-logo">
-                  <a href="index-2.html"
+                  <a href="#topPage"
                     ><img
                       src="assets/img/autopartsLogo.png"
                       alt="logo"
@@ -263,7 +263,7 @@
                   /></a>
                 </div>
                 <!-- main menu area start -->
-                <a
+                <!-- <a
                   class="header-top-modal-btn float-right"
                   data-bs-toggle="offcanvas"
                   href="#offcanvasmanu"
@@ -274,10 +274,13 @@
                     <span></span>
                     <span></span>
                   </div>
-                </a>
+                </a> -->
                 <ul class="header-cta-btn float-right">
                   <li>
-                    <a href="#" class="magic-hover magic-hover__square">
+                    <a
+                      href="#contactSection"
+                      class="magic-hover magic-hover__square"
+                    >
                       <i class="fa fa-long-arrow-left"></i> let's talk with
                       us</a
                     >
@@ -287,10 +290,11 @@
                   <div class="main-menu">
                     <nav>
                       <ul>
-                        <li class="active"><a href="index.html">home</a></li>
-                        <li><a href="#about">about</a></li>
-                        <li><a href="#">about me</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="#topPage">home</a></li>
+                        <li><a href="#aboutSection">about</a></li>
+                        <li><a href="#challengesSection">Challenges</a></li>
+                        <li><a href="#subscriptionSection">Subscription</a></li>
+                        <li><a href="#contactSection">contact</a></li>
                       </ul>
                     </nav>
                   </div>
@@ -304,7 +308,7 @@
     </header>
     <!-- header area end -->
     <!-- khalif hero area start -->
-    <div class="khalif-hero-wrape hero-bg" id="about">
+    <div class="khalif-hero-wrape hero-bg">
       <div class="hero-content">
         <div class="container">
           <div class="row align-items-center">
@@ -322,7 +326,7 @@
               <div class="hero-btn-para-wrape">
                 <div class="hero-btn">
                   <a
-                    href="#"
+                    href="#contactSection"
                     class="btn-2 text-center text-uppercase bgc-3 btn-tilt"
                     ><span>
                       <svg
@@ -356,42 +360,8 @@
       </div>
     </div>
     <!-- khalif hero area end -->
-    <!-- khalif popular brand area start -->
-    <!-- <div class="khalif-brand-wrape pt-100 pb-100">
-      <div class="container">
-        <div class="col-12">
-          <div
-            class="section-title-wrape text-center text-uppercase position-relative mb-80"
-          >
-            <h3>brands</h3>
-            <h4>popular brands</h4>
-          </div>
-          <div class="all-brand owl-carousel owl-theme">
-            <div class="single-brand">
-              <a href="#"><img src="assets/img/brand/1.png" alt="brand" /></a>
-            </div>
-            <div class="single-brand">
-              <a href="#"><img src="assets/img/brand/2.png" alt="brand" /></a>
-            </div>
-            <div class="single-brand">
-              <a href="#"><img src="assets/img/brand/3.png" alt="brand" /></a>
-            </div>
-            <div class="single-brand">
-              <a href="#"><img src="assets/img/brand/4.png" alt="brand" /></a>
-            </div>
-            <div class="single-brand">
-              <a href="#"><img src="assets/img/brand/5.png" alt="brand" /></a>
-            </div>
-            <div class="single-brand">
-              <a href="#"><img src="assets/img/brand/1.png" alt="brand" /></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- khalif popular brand area end -->
     <!-- khalif short about area start -->
-    <div class="khalif-about-wrape mb-100 pt-100">
+    <div class="khalif-about-wrape mb-100 pt-100" id="aboutSection">
       <div class="container">
         <div class="row">
           <div class="col-xl-7 col-lg-6 col-md-12 col-sm-12">
@@ -457,7 +427,10 @@
     </div>
     <!-- khalif short about area end -->
     <!-- khalif services area start -->
-    <div class="khalif-services-wrape services-bg pt-100 pb-100">
+    <div
+      class="khalif-services-wrape services-bg pt-100 pb-100"
+      id="challengesSection"
+    >
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -1008,26 +981,8 @@
       </div> -->
     </div>
     <!-- khalif services area end -->
-    <!-- khalif progress area start -->
-
-    <!-- khalif progress area end -->
-    <!-- khalif video area start -->
-    <!-- <div class="khalif-video-wrape text-center video-bg">
-      <div class="videos-icon-text">
-        <h3 data-aos="fade-down" data-aos-duration="500">watch this video</h3>
-        <a
-          class="popup-video wow pulse infinite"
-          href="https://www.youtube.com/watch?v=snvzakfcTmY"
-          ><i class="fa fa-play"></i
-        ></a>
-      </div>
-    </div> -->
-    <!-- khalif video area end -->
-    <!-- khalif portfolio area start -->
-
-    <!-- khalif portfolio area end -->
     <!-- khalif testimonial area start -->
-    <div class="khalif-pricing-wrape pt-100 pb-100">
+    <div class="khalif-pricing-wrape pt-100 pb-100" id="subscriptionSection">
       <div class="container">
         <div class="row" style="justify-content: center">
           <div class="col-12">
@@ -1429,120 +1384,8 @@
       </div>
     </div>
     <!-- khalif testimonial area end -->
-    <!-- khalif awards area start -->
-    <!-- <div class="khalif-awards-wrape pt-100 pb-100">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div
-              class="section-title-wrape text-uppercase text-center position-relative mb-80"
-            >
-              <h3>awards</h3>
-              <h4>our awards</h4>
-            </div>
-            <div class="all-awards-content">
-              <div data-fx="1" data-aos="fade-up" data-aos-delay="100">
-                <div
-                  class="single-awards-list block__link"
-                  data-img="assets/img/awards/1.png"
-                >
-                  <div class="awards-number">01</div>
-                  <div class="awards-web">php.net</div>
-                  <div class="awards-title">best performer award</div>
-                  <div class="awards-para">
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                      sed do eiusmod tempor incididunt ut labore
-                    </p>
-                  </div>
-                  <div class="awards-link">
-                    <a href="#">
-                      <svg
-                        id="Layer_5"
-                        data-name="Layer 1"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 128 95.91"
-                      >
-                        <path
-                          d="M259.88,468.09l-52,45.93-5.1-5.52,43.33-38.41H131.88v-8H246.09l-43.25-38.36,5-5.62,52.06,46Z"
-                          transform="translate(-131.88 -418.11)"
-                        ></path>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div data-fx="1" data-aos="fade-up" data-aos-delay="300">
-                <div
-                  class="single-awards-list block__link"
-                  data-img="assets/img/awards/2.png"
-                >
-                  <div class="awards-number">02</div>
-                  <div class="awards-web">behance.net</div>
-                  <div class="awards-title">star of the week award</div>
-                  <div class="awards-para">
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                      sed do eiusmod tempor incididunt ut labore
-                    </p>
-                  </div>
-                  <div class="awards-link">
-                    <a href="#">
-                      <svg
-                        id="Layer_6"
-                        data-name="Layer 1"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 128 95.91"
-                      >
-                        <path
-                          d="M259.88,468.09l-52,45.93-5.1-5.52,43.33-38.41H131.88v-8H246.09l-43.25-38.36,5-5.62,52.06,46Z"
-                          transform="translate(-131.88 -418.11)"
-                        ></path>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
-
-              <div data-fx="1" data-aos="fade-up" data-aos-delay="500">
-                <div
-                  class="single-awards-list block__link"
-                  data-img="assets/img/awards/3.png"
-                >
-                  <div class="awards-number">03</div>
-                  <div class="awards-web">themeforest.net</div>
-                  <div class="awards-title">nice wP dev award</div>
-                  <div class="awards-para">
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                      sed do eiusmod tempor incididunt ut labore
-                    </p>
-                  </div>
-                  <div class="awards-link">
-                    <a href="#">
-                      <svg
-                        id="Layer_7"
-                        data-name="Layer 1"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 128 95.91"
-                      >
-                        <path
-                          d="M259.88,468.09l-52,45.93-5.1-5.52,43.33-38.41H131.88v-8H246.09l-43.25-38.36,5-5.62,52.06,46Z"
-                          transform="translate(-131.88 -418.11)"
-                        ></path>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- khalif awards area end -->
     <!-- khalif blog area start -->
-    <div id="khalif-contact-area" class="khalif-contact-area mt-110 mb-110">
+    <div class="khalif-contact-area mt-110 mb-110" id="contactSection">
       <!-- contact info area start -->
       <div id="contact-info-area" class="contact-info-area">
         <div class="container">
@@ -2027,23 +1870,54 @@
               </div>
             </div>
             <div class="row pt-100">
-              <div class="col-md-3">
+              <div class="col-md-6">
                 <p>
                   1860 Wilma Rudolph Blvd, Ste #128-I Clarksville, TN 37040 US
                 </p>
-              </div>
-              <div class="col-md-3">
                 <p>1875 Century park E Ste 1025, Los Angeles CA 90067, US</p>
-              </div>
-              <div class="col-md-3">
                 <p>3030 Warrenville Rd Ste #450-29, Lisle IL 60532, US</p>
-              </div>
-              <div class="col-md-3">
                 <p>
                   1701 & 1702 , 17th Floor, Green Tower, Riggat Al Buteen, Deira
                   Dubai UAE
                 </p>
               </div>
+              <div class="col-md-6">
+                <div class="row">
+                  <div class="col-md-3">
+                    <img
+                      src="assets/img/customercare-01.png"
+                      alt="Auto Parts Customer Care"
+                      class="w-75 fill-grey"
+                    />
+                  </div>
+                  <div class="col-md-3">
+                    <img
+                      src="assets/img/store-01.png"
+                      alt="Auto Parts Store"
+                      class="w-75 fill-grey"
+                    />
+                  </div>
+                  <div class="col-md-3">
+                    <img
+                      src="assets/img/planet-01.png"
+                      alt="Auto Parts Planet"
+                      class="w-75 fill-grey"
+                    />
+                  </div>
+                  <div class="col-md-3">
+                    <img
+                      src="assets/img/store.us-01.png"
+                      alt="All Auto Parts Store US"
+                      class="w-75 fill-grey"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-2"></div>
+              <div class="col-md-2"></div>
+              <div class="col-md-2"></div>
             </div>
           </div>
           <div class="offset-xl-1 col-xl-2 offset-lg-1 col-lg-2 col-md-3">
