--- a/index.html
+++ b/index.html
@@ -1839,8 +1839,8 @@
                 </div>
                 <ul class="contact-info">
                   <li>
-                    <a href="mailto:support@allautopartstore.com"
-                      >support@allautopartstore.com</a
+                    <a href="mailto:support@allautopartsgroups.io"
+                      >support@allautopartsgroups.io</a
                     >
                   </li>
                   <!-- <li>
