--- a/index.html
+++ b/index.html
@@ -1883,32 +1883,32 @@
               </div>
               <div class="col-md-6">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-md-3 text-center">
                     <img
                       src="assets/img/customercare-01.png"
                       alt="Auto Parts Customer Care"
-                      class="w-75 fill-grey"
+                      class="w-75 fill-grey custom-width-mobile-logo"
                     />
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 text-center">
                     <img
                       src="assets/img/store-01.png"
                       alt="Auto Parts Store"
-                      class="w-75 fill-grey"
+                      class="w-75 fill-grey custom-width-mobile-logo"
                     />
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 text-center">
                     <img
                       src="assets/img/planet-01.png"
                       alt="Auto Parts Planet"
-                      class="w-75 fill-grey"
+                      class="w-75 fill-grey custom-width-mobile-logo"
                     />
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 text-center">
                     <img
                       src="assets/img/store.us-01.png"
                       alt="All Auto Parts Store US"
-                      class="w-75 fill-grey"
+                      class="w-75 fill-grey custom-width-mobile-logo"
                     />
                   </div>
                 </div>
