--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>All Auto Parts Group</title>
+
+    <meta property="og:title" content="All Auto Parts Group" />
+    <meta
+      property="og:description"
+      content="All Auto Part Group is a leading supplier specializing in used and remanufactured engines and transmissions, fostering a reliable network of over 500 partners for optimal vehicle performance, connecting enthusiasts with valuable resources and preferred mechanics."
+    />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="assets/img/autopartsLogo.png"
+    />
+    <meta property="og:url" content="https://allautopartsgroups.io" />
+    <meta property="og:type" content="website" />
+
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -421,6 +435,32 @@
                 connect consumers with the automotive industry.
               </p>
             </div>
+          </div>
+          <div class="col-md-6 mt-100">
+            <h2 class="text-uppercase">Vision</h2>
+            <p>
+              Imagine a world where the complexity of auto care is a thing of
+              the past. A world where every car owner drives with confidence,
+              every mechanic operates with unparalleled efficiency, and every
+              shop thrives on innovation. We envision a future where the
+              relationship between cars, their owners, and care providers is
+              synergistic, fostering an ecosystem of automotive excellence
+              that's not just a service, but a seamless part of every driver's
+              life.
+            </p>
+          </div>
+          <div class="col-md-6 mt-100">
+            <h2 class="text-uppercase">Mission</h2>
+            <p>
+              Our mission is to revolutionize the auto care industry by creating
+              cutting-edge, user-friendly solutions that streamline maintenance,
+              repairs, and management. We are committed to empowering car owners
+              with knowledge, equipping mechanics with state-of-the-art tools,
+              and transforming auto shops into hubs of customer-centric
+              innovation. By bridging the gaps with technology and service, we
+              make auto care an intuitive, trustworthy, and gratifying
+              experience for everyone.
+            </p>
           </div>
         </div>
       </div>
@@ -990,7 +1030,11 @@
               class="section-title-wrape text-center text-uppercase position-relative mb-100"
             >
               <h3>Subscription</h3>
-              <h4>Subscription Plan</h4>
+              <h4>Premium Auto Care Subscription</h4>
+              <p class="mt-100 mt-sm-200">
+                Maximize Your Workshop's Potential with Our Premium Auto Service
+                Subscription: <br />The Ultimate Toolkit for Modern Mechanics
+              </p>
             </div>
           </div>
           <!-- <div
@@ -1168,43 +1212,67 @@
                 </svg>
               </div>
               <ul class="price-item-list">
-                <li><i class="fa fa-check"></i> Customer Referrals</li>
                 <li>
-                  <i class="fa fa-check"></i> Website and Toll-Free On your
-                  Registered Business Name
-                </li>
-                <li><i class="fa fa-check"></i> Listings on Google Business</li>
-                <li><i class="fa fa-check"></i> Market Research Insights</li>
-                <li>
-                  <i class="fa fa-check"></i> Suggestions On New Locations
-                </li>
-                <li><i class="fa fa-check"></i> Backend Services</li>
-                <li><i class="fa fa-check"></i> Payment Gateway Suggestions</li>
-                <li>
-                  <i class="fa fa-check"></i> Dispute Resolution (Chargeback
-                  Resolutions)
+                  <i class="fa fa-check"></i> Enhanced Customer Referral Program
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> Minimum 1 Year Warranty On Used
-                  Engine & Transmission
-                </li>
-                <li><i class="fa fa-check"></i> Cash On Delivery Option</li>
-                <li>
-                  <i class="fa fa-check"></i> Easy Monthly Installments (Parts &
-                  Labour)
-                </li>
-                <li><i class="fa fa-check"></i> Doorstep Delivery of Parts</li>
-                <li><i class="fa fa-check"></i> Appointment & Coordination</li>
-                <li>
-                  <i class="fa fa-check"></i> Certified Mechanics One Call Away
+                  <i class="fa fa-check"></i> Dedicated Website and Toll-Free
+                  Number LinkedTo Your Business
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> Assistance on Advanced Equipments
+                  <i class="fa fa-check"></i> Prominent Google Business Listings
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> Discounted Car Parts as compared
-                  to the Market (Rebuilt, Aftermarket, & Used OEM at 15%
-                  Discounted Rate)
+                  <i class="fa fa-check"></i> Actionable Market Research
+                  Insights
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Strategic New Location
+                  Recommendations
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Comprehensive Backend Support
+                  Services
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Optimized Payment Gateway
+                  Solutions
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Effective Chargeback & Dispute
+                  Resolution
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Guaranteed Minimum 1-Year Warranty
+                  On Pre-Owned Engines & Transmissions
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Convenient Cash On Delivery
+                  Options
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Affordable Payment Plans for Parts
+                  & Services
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Direct-to-Doorstep Parts Delivery
+                  Service
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Efficient Scheduling and
+                  Coordination Services
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Access to Certified Mechanics at
+                  the Touch of a Button
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Support for Advanced Diagnostic
+                  Equipments
+                </li>
+                <li>
+                  <i class="fa fa-check"></i> Competitive Pricing on Car Parts -
+                  Rebuilt, Aftermarket, & Used OEM at 15% Discounted Rate
                 </li>
               </ul>
             </div>
